# data-processing

./: .pre-commit-config.yaml  CLAUDE.md  README.md  conversation-lstm-walkthrough.md  pyproject.toml
.github/workflows/: test.yml
data-fetcher/: README.md  conftest.py  pyproject.toml
data-fetcher/src/data_fetcher/: fetcher.py
data-fetcher/tests/: test_fetcher.py
data-fetcher/tests/config/: fetcher.yaml
docs/: .lstm-walkthrough.md.swp  lstm-walkthrough.md  pytest-mock.md
feature-extraction/: README.md  conftest.py  pyproject.toml
feature-extraction/src/feature_extraction/: base.py  feature_extraction.py  fft.py  pipeline.py  trend.py
feature-extraction/tests/: test_features.py
feature-extraction/tests/config/: features.yaml
finance-demo/: README.md  conftest.py  pyproject.toml
finance-demo/src/finance_demo/: demo.py  system.py
finance-demo/tests/: test_finance_demo.py
finance-demo/tests/config/: finance_demo.yaml
model/: README.md  conftest.py  pyproject.toml
model/src/model/: lstm.py  model.py  network.py  predictor.py
model/tests/: test_model.py  test_network.py
model/tests/config/: model.yaml  network.yaml
parametrize-tests/: README.md
stock-analyzer/: README.md  pyproject.toml
stock-analyzer/src/stock_analyzer/: cli.py
