[project]
name = "feature-extraction"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "scipy",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/feature_extraction"]

[tool.uv.sources]
parametrize-tests = { path = "../../signal-processing/parametrize-tests", editable = true }

[dependency-groups]
dev = [
    "parametrize-tests",
    "pytest>=9.0.2",
]
