[project]
name = "finance-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "signal-processing",
    "data-fetcher",
    "feature-extraction",
    "model",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finance_demo"]
