[project]
name = "stock-analyzer"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "finance-demo",
]

[project.scripts]
stock-analyzer = "stock_analyzer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_analyzer"]
